// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Playlist /> Queries, renders data and matches snapshot 1`] = `
<div
  className="ant-list ant-list-split"
>
  <Spin
    size="default"
    spinning={false}
    wrapperClassName=""
  >
    <div
      className="ant-spin-nested-loading"
    >
      <div
        className="ant-spin-container"
        key="container"
      >
        <Track
          __typename="test"
          album={
            Object {
              "__typename": "test",
              "id": "albumId",
              "images": Array [
                Object {
                  "__typename": "test",
                  "url": "albumeImageUrl",
                },
              ],
              "name": "albumName",
            }
          }
          artists={
            Array [
              Object {
                "__typename": "test",
                "id": "artistId",
                "name": "artistName",
              },
            ]
          }
          id="trackId"
          key="trackId"
          name="trackName"
          preview_url="trackPreview"
          uri="trackUri"
        >
          <Item>
            <li
              className="ant-list-item"
            >
              <Meta
                avatar={
                  <Avatar
                    shape="square"
                    size="large"
                    src="albumeImageUrl"
                  >
                    t
                  </Avatar>
                }
                description="artistName"
                title={
                  <span>
                    trackName
                  </span>
                }
              >
                <div
                  className="ant-list-item-meta"
                >
                  <div
                    className="ant-list-item-meta-avatar"
                  >
                    <Avatar
                      shape="square"
                      size="large"
                      src="albumeImageUrl"
                    >
                      <span
                        className="ant-avatar ant-avatar-lg ant-avatar-square ant-avatar-image"
                        style={Object {}}
                      >
                        <img
                          onError={[Function]}
                          src="albumeImageUrl"
                        />
                      </span>
                    </Avatar>
                  </div>
                  <div
                    className="ant-list-item-meta-content"
                  >
                    <h4
                      className="ant-list-item-meta-title"
                    >
                      <span>
                        trackName
                      </span>
                    </h4>
                    <div
                      className="ant-list-item-meta-description"
                    >
                      artistName
                    </div>
                  </div>
                </div>
              </Meta>
              <Button
                block={false}
                disabled={false}
                ghost={false}
                htmlType="button"
                icon="play-circle"
                loading={false}
                onClick={[Function]}
                title="Preview track"
              >
                <Wave>
                  <button
                    className="ant-btn"
                    disabled={false}
                    onClick={[Function]}
                    title="Preview track"
                    type="button"
                  >
                    <Icon
                      type="play-circle"
                    >
                      <LocaleReceiver
                        componentName="Icon"
                      >
                        <i
                          aria-label="icon: play-circle"
                          className="anticon anticon-play-circle"
                        >
                          <IconReact
                            className=""
                            type="play-circle-o"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-icon="play-circle"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              key="svg-play-circle"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                key="svg-play-circle-svg-0"
                              />
                              <path
                                d="M719.4 499.1l-296.1-215A15.9 15.9 0 0 0 398 297v430c0 13.1 14.8 20.5 25.3 12.9l296.1-215a15.9 15.9 0 0 0 0-25.8zm-257.6 134V390.9L628.5 512 461.8 633.1z"
                                key="svg-play-circle-svg-1"
                              />
                            </svg>
                          </IconReact>
                        </i>
                      </LocaleReceiver>
                    </Icon>
                    <span
                      key=".0"
                    >
                      Play
                    </span>
                  </button>
                </Wave>
              </Button>
            </li>
          </Item>
        </Track>
      </div>
    </div>
  </Spin>
</div>
`;

exports[`<Playlist /> Refetches data with load state after regenerate button is pressed 1`] = `
<div
  className="ant-list ant-list-split"
>
  <Spin
    size="default"
    spinning={false}
    wrapperClassName=""
  >
    <div
      className="ant-spin-nested-loading"
    >
      <div
        className="ant-spin-container"
        key="container"
      >
        <Track
          __typename="test"
          album={
            Object {
              "__typename": "test",
              "id": "albumId",
              "images": Array [
                Object {
                  "__typename": "test",
                  "url": "albumeImageUrl",
                },
              ],
              "name": "albumName",
            }
          }
          artists={
            Array [
              Object {
                "__typename": "test",
                "id": "artistId",
                "name": "artistName",
              },
            ]
          }
          id="trackId"
          key="trackId"
          name="trackName"
          preview_url="trackPreview"
          uri="trackUri"
        >
          <Item>
            <li
              className="ant-list-item"
            >
              <Meta
                avatar={
                  <Avatar
                    shape="square"
                    size="large"
                    src="albumeImageUrl"
                  >
                    t
                  </Avatar>
                }
                description="artistName"
                title={
                  <span>
                    trackName
                  </span>
                }
              >
                <div
                  className="ant-list-item-meta"
                >
                  <div
                    className="ant-list-item-meta-avatar"
                  >
                    <Avatar
                      shape="square"
                      size="large"
                      src="albumeImageUrl"
                    >
                      <span
                        className="ant-avatar ant-avatar-lg ant-avatar-square ant-avatar-image"
                        style={Object {}}
                      >
                        <img
                          onError={[Function]}
                          src="albumeImageUrl"
                        />
                      </span>
                    </Avatar>
                  </div>
                  <div
                    className="ant-list-item-meta-content"
                  >
                    <h4
                      className="ant-list-item-meta-title"
                    >
                      <span>
                        trackName
                      </span>
                    </h4>
                    <div
                      className="ant-list-item-meta-description"
                    >
                      artistName
                    </div>
                  </div>
                </div>
              </Meta>
              <Button
                block={false}
                disabled={false}
                ghost={false}
                htmlType="button"
                icon="play-circle"
                loading={false}
                onClick={[Function]}
                title="Preview track"
              >
                <Wave>
                  <button
                    className="ant-btn"
                    disabled={false}
                    onClick={[Function]}
                    title="Preview track"
                    type="button"
                  >
                    <Icon
                      type="play-circle"
                    >
                      <LocaleReceiver
                        componentName="Icon"
                      >
                        <i
                          aria-label="icon: play-circle"
                          className="anticon anticon-play-circle"
                        >
                          <IconReact
                            className=""
                            type="play-circle-o"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-icon="play-circle"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              key="svg-play-circle"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                key="svg-play-circle-svg-0"
                              />
                              <path
                                d="M719.4 499.1l-296.1-215A15.9 15.9 0 0 0 398 297v430c0 13.1 14.8 20.5 25.3 12.9l296.1-215a15.9 15.9 0 0 0 0-25.8zm-257.6 134V390.9L628.5 512 461.8 633.1z"
                                key="svg-play-circle-svg-1"
                              />
                            </svg>
                          </IconReact>
                        </i>
                      </LocaleReceiver>
                    </Icon>
                    <span
                      key=".0"
                    >
                      Play
                    </span>
                  </button>
                </Wave>
              </Button>
            </li>
          </Item>
        </Track>
        <Track
          __typename="test"
          album={
            Object {
              "__typename": "test",
              "id": "albumId2",
              "images": Array [
                Object {
                  "__typename": "test",
                  "url": "albumeImageUrl",
                },
              ],
              "name": "albumName",
            }
          }
          artists={
            Array [
              Object {
                "__typename": "test",
                "id": "artistId2",
                "name": "artistName",
              },
            ]
          }
          id="trackId2"
          key="trackId2"
          name="trackName"
          preview_url="trackPreview"
          uri="trackUri"
        >
          <Item>
            <li
              className="ant-list-item"
            >
              <Meta
                avatar={
                  <Avatar
                    shape="square"
                    size="large"
                    src="albumeImageUrl"
                  >
                    t
                  </Avatar>
                }
                description="artistName"
                title={
                  <span>
                    trackName
                  </span>
                }
              >
                <div
                  className="ant-list-item-meta"
                >
                  <div
                    className="ant-list-item-meta-avatar"
                  >
                    <Avatar
                      shape="square"
                      size="large"
                      src="albumeImageUrl"
                    >
                      <span
                        className="ant-avatar ant-avatar-lg ant-avatar-square ant-avatar-image"
                        style={Object {}}
                      >
                        <img
                          onError={[Function]}
                          src="albumeImageUrl"
                        />
                      </span>
                    </Avatar>
                  </div>
                  <div
                    className="ant-list-item-meta-content"
                  >
                    <h4
                      className="ant-list-item-meta-title"
                    >
                      <span>
                        trackName
                      </span>
                    </h4>
                    <div
                      className="ant-list-item-meta-description"
                    >
                      artistName
                    </div>
                  </div>
                </div>
              </Meta>
              <Button
                block={false}
                disabled={false}
                ghost={false}
                htmlType="button"
                icon="play-circle"
                loading={false}
                onClick={[Function]}
                title="Preview track"
              >
                <Wave>
                  <button
                    className="ant-btn"
                    disabled={false}
                    onClick={[Function]}
                    title="Preview track"
                    type="button"
                  >
                    <Icon
                      type="play-circle"
                    >
                      <LocaleReceiver
                        componentName="Icon"
                      >
                        <i
                          aria-label="icon: play-circle"
                          className="anticon anticon-play-circle"
                        >
                          <IconReact
                            className=""
                            type="play-circle-o"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-icon="play-circle"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              key="svg-play-circle"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                key="svg-play-circle-svg-0"
                              />
                              <path
                                d="M719.4 499.1l-296.1-215A15.9 15.9 0 0 0 398 297v430c0 13.1 14.8 20.5 25.3 12.9l296.1-215a15.9 15.9 0 0 0 0-25.8zm-257.6 134V390.9L628.5 512 461.8 633.1z"
                                key="svg-play-circle-svg-1"
                              />
                            </svg>
                          </IconReact>
                        </i>
                      </LocaleReceiver>
                    </Icon>
                    <span
                      key=".0"
                    >
                      Play
                    </span>
                  </button>
                </Wave>
              </Button>
            </li>
          </Item>
        </Track>
      </div>
    </div>
  </Spin>
</div>
`;
